--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
       <br>
       <audio id="audiotag1" src="./assets/audio/start.mp3"  preload="auto"></audio>
-      
+
+      <div class="hidden" id="title">
+            <h1>Colors in Space</h1>
+      </div>
       <div class="hidden" id="start-button">
             <p>Start<p>
       </div>
-      
       <canvas id="game-canvas"></figure>
 </body>
 </html>
