Adding User Instructions

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             </button>
             
       </div>
+
+      <div class="instructions">
+            <div class="hidden" id="instructions">
+                  <p>Use the Arrow-Keys to Move<p>
+            </div>
+      </div>
       
 
       <canvas id="game-canvas"></figure>
