--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
+      <title>Color in Space</title>
       <link rel="icon" type="image/x-icon"  href="./assets/sprites/favicon.ico">
       <link rel="stylesheet" href="./dist/main.css" />
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
       <script src="https://kit.fontawesome.com/0ef5717b3c.js" crossorigin="anonymous"></script>
       <script src="./dist/keymaster.js"></script>
       <script src="./dist/main.js"></script>
-      <title>Project Name</title>
 </head>
 <body>
    
