Adding proper FavIcon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Color in Space</title>
-      <link rel="icon" type="image/x-icon"  href="./assets/sprites/favicon.ico">
+      <link rel="apple-touch-icon" sizes="180x180" href="/assets/sprites/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/assets/sprites//favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/assets/sprites//favicon-16x16.png">
+      <link rel="manifest" href="/assets/sprites//site.webmanifest">
       <link rel="stylesheet" href="./dist/main.css" />
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
       <script src="https://kit.fontawesome.com/0ef5717b3c.js" crossorigin="anonymous"></script>
