Changes for favicon and stylesheets

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <link rel="apple-touch-icon" sizes="180x180" href="/assets/sprites/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/assets/sprites//favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/assets/sprites//favicon-16x16.png">
-      <link rel="manifest" href="/assets/sprites//site.webmanifest">
+      <!-- <link rel="manifest" href="/assets/sprites//site.webmanifest"> -->
       <link rel="stylesheet" href="./dist/main.css" />
-      <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+      <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
       <script src="https://kit.fontawesome.com/0ef5717b3c.js" crossorigin="anonymous"></script>
       <script src="./dist/keymaster.js"></script>
       <script src="./dist/main.js"></script>
