Fixing the favicon hopefully

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Color in Space</title>
-      <link rel="apple-touch-icon" sizes="180x180" href="/assets/sprites/apple-touch-icon.png">
-      <link rel="icon" type="image/x-icon" href="/assets/sprites//favicon.ico">
+      <!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/sprites/apple-touch-icon.png"> -->
+      <link rel="icon" type="image/x-icon" href="/assets/sprites/favicon.ico?">
 
       <!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/sprites//favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/assets/sprites//favicon-16x16.png"> -->
@@ -66,7 +66,7 @@
               <i class="fab fa-github fa-2x" aria-hidden="true"></i>
             </a>
       
-            <a href="https://www.linkedin.com/in/victor-he/" rel="noopener noreferrer" target="_blank">
+            <a href="https://www.linkedin.com/in/gabriel-groenendaal" rel="noopener noreferrer" target="_blank">
               <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
             </a>
         
