--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Color in Space</title>
       <!-- <link rel="apple-touch-icon" sizes="180x180" href="/assets/sprites/apple-touch-icon.png"> -->
-      <link rel="icon" type="image/x-icon" href="/assets/sprites/favicon.ico?">
+      <link rel="icon" type="image/x-icon" href="https://i.imgur.com/EjiNHPG.png?">
 
       <!-- <link rel="icon" type="image/png" sizes="32x32" href="/assets/sprites//favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/assets/sprites//favicon-16x16.png"> -->
