Adding meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
       <meta charset="UTF-8">
+      <meta property="og:title" content="Colors in Space" />
+      <meta property="og:image" content="Thumbnail_ColorInSpace.png" />
+      <meta property="og:description" content="A 2D visual interactive experience built Vanilla JavaScript, HTML5, CSS3, and the Canvas API. Expore an endless expanse of color and good vibes." />
+      <meta property="og:url" content="https://gabrielgroenendaal.github.io/Color_In_Space/" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Color in Space</title>
